Got project building again and started migrating over to Kotlin.

--- a/MeasureUUUP/src/main/res/values/strings.xml
+++ b/MeasureUUUP/src/main/res/values/strings.xml
@@ -54,6 +54,7 @@
     <string name="megabytes_rad">Megabytes</string>
     <string name="gigabytes_rad">Gigabytes</string>
     <string name="terabytes_rad">Terabytes</string>
+    <string name="empty"></string>
 
 
 </resources>
